update bullet sizes and gaps. add fit to page to ensure sizing

--- a/src/app/pdf-swiper/pdf-swiper.component.css
+++ b/src/app/pdf-swiper/pdf-swiper.component.css
@@ -1,27 +1,25 @@
-swiper-slide {
-    height: 100vh;
-    width: 100%;
-    color: black;
+swiper-container{
+    width: 50vw;
+    height: 80vh;
+}
+swiper-container[_ngcontent-ng-c650732167]::part(pagination) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
   }
-  
-  swiper-container ::part(pagination) {
-      display: flex;
-      flex-direction: row-reverse;  /* This will make the bullets go from right to left */
-    }
-  
-  swiper-container::part(bullet-active) {
-    transform: scale(1.7);
+swiper-container::part(bullet-active) {
+    transform: scale(2.4);
     background: black;
-    margin-bottom: 5px;
   }
   
   swiper-container::part(bullet) {
-    transform: scale(1.2);
+    transform: scale(1.7);
     background: #8180a2; /* More defined grey */
     opacity: 1;
-    margin-bottom: 5px;
   }
+ 
   
   pdf-viewer{
-    width: 100vw; height: 100vh; object-fit: contain;
+    width: 100%; height: 100%;
   }
